Update paper for ICRA submission.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
-rss12humanoids.aux
-rss12humanoids.bbl
-rss12humanoids.blg
-rss12humanoids.log
-rss12humanoids.out
-rss12humanoids.pdf
+12icra.aux
+12icra.bbl
+12icra.blg
+12icra.log
+12icra.out
+12icra.pdf
+12icra.*.log
+12icra.aux.make
+12icra.auxbbl.make
+12icra.auxtarget.make
+12icra.d
+12icra.fls
+12icra.out.make
